[package]
name = "docker-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
futures = "0.3"
headers = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }